Stuck on slytherin, need to fix winning house sorting

--- a/react-sorting-hat/src/CSS/Style.css
+++ b/react-sorting-hat/src/CSS/Style.css
@@ -1,4 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:700,300);
+@font-face {
+  font-family: 'OldTypefaces';
+  src: local('OldTypefaces'), url(../fonts/OldTypefaces.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'VTCSwitchbladeRomance';
+  src: local('VTCSwitchbladeRomance'), url(../fonts/VTCSwitchbladeRomance.ttf) format('truetype');
+}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -56,7 +64,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'OldTypefaces', serif;
   font-size: 16px;
   font-weight: 300;
   line-height: 1em;
@@ -824,7 +832,6 @@ body {
   -moz-transform: rotateY(-180deg);
   -ms-transform: rotateY(-180deg);
   transform: rotateY(-180deg);
-  font-family: 'Arimo', sans-serif;
   display:-webkit-flex;
   display: flex;
   -webkit-justify-content: center;
